--- a/examples/docker-compose/docker-compose.yml
+++ b/examples/docker-compose/docker-compose.yml
@@ -1,11 +1,11 @@
 ejabberd:
   image: rroemhild/ejabberd
   ports:
-    - 5111:5111
-    - 5299:5299
+    - 5222:5222
+    - 5269:5269
     - 5280:5280
   environment:
     - ERLANG_NODE=ejabberd
-    - XMPP_DOMAIN=example.com xyz.io
-    - EJABBERD_ADMINS=admin@example.com
-    - EJABBERD_USERS=admin@example.com:password4321 user1@xyz.io
+    - XMPP_DOMAIN=garasiku.co.id garasiku.co.id
+    - EJABBERD_ADMINS=admin@garasiku.co.id
+    - EJABBERD_USERS=admin@garasiku.co.id:admin123 user1@xyz.io
